tests/typecheck/should_compile/T12064a.hs
module T12064a where
import {-# SOURCE #-} T12064
class K a where
  kfun :: D -> a
