tests/typecheck/should_fail/T20588c_aux.hs
module T20588c_aux where

import {-# SOURCE #-} T20588c

